--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 20:10:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6">
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 25 2025 19:53:09 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="656504e52e383d09efa77703" data-wf-site="656504e52e383d09efa776a6" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Resonite</title>
@@ -21,14 +21,14 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
                 <a href="index.html" aria-current="page" class="nav-link w--current">Home</a>
               </li>
               <li>
-                <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
+                <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
               </li>
               <li>
                 <a href="https://resonite.sellfy.store/" class="nav-link">Merch</a>
@@ -46,7 +46,7 @@
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
-                    <a href="http://resonite.com/Whitepaper.pdf" target="_blank" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
+                    <a href="https://resonite.com/Whitepaper.pdf" target="_blank" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
                   </nav>
                 </div>
               </li>
@@ -60,7 +60,7 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
-                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="https://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
@@ -92,10 +92,7 @@
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
-              </li>
-              <li>
-                <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
+                <a href="https://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830?utm_source=resonite-website" class="button-6 w-button">Download</a>
@@ -155,7 +152,7 @@
         <div id="w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429d2-efa77703" class="pricing-card-three"><img src="images/Color_128_Supporter_Yellow.png" loading="lazy" alt="" class="pricing-image">
           <h3 class="heading-12">$5/Month: Explorer</h3>
           <p class="pricing-card-text">- 25 GB of storage space (avatars, items, assets, worlds...)<br>‍<br>- Basic shout-out (videos, streams, posts)<br>‍<br>- Discord access<br><br><br><br><br><br><br><br><br><br><br><br> </p>
-          <a href="https://www.patreon.com/resonite" target="_blank" class="text-link-arrow w-inline-block">
+          <a href="https://account.resonite.com/" target="_blank" class="text-link-arrow w-inline-block">
             <div class="text-block-22">Learn more</div>
             <div class="arrow-embed-2 w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.72 15L16.3472 10.357C16.7732 9.92932 16.7732 9.23603 16.3472 8.80962L11.72 4.16667L10.1776 5.71508L12.9425 8.4889H4.16669V10.6774H12.9425L10.1776 13.4522L11.72 15Z" fill="currentColor"></path>
@@ -175,7 +172,7 @@
         <div id="w-node-_94b3c992-6e84-9ddb-59fb-4a4d840429e6-efa77703" class="pricing-card-three"><img src="images/Color_128_Supporter_Yellow.png" loading="lazy" alt="" class="pricing-image">
           <h3 class="heading-14">$75/Month: Builder</h3>
           <p class="pricing-card-text">- 500 GB of shareable storage space (avatars, items, assets, worlds...)<br>‍<br>- 2 groups (for sharing content with others)<br>‍<br>- 2 custom exit messages (randomly shown to all users)<br><br>- Headless Server Software (A piece of software to allow users to host their own servers, NOT a dedicated server that we host for you)<br><br>- Custom 2D badge (in-game)<br><br>- Custom 3D badge (in-game)<br><br>- Verbal (where possible) / Prominent shout-out<br><br>- Discord access </p>
-          <a href="https://www.patreon.com/resonite" class="text-link-arrow w-inline-block">
+          <a href="https://account.resonite.com/" class="text-link-arrow w-inline-block">
             <div class="text-block-24">Learn more</div>
             <div class="arrow-embed-2 w-embed"><svg width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.72 15L16.3472 10.357C16.7732 9.92932 16.7732 9.23603 16.3472 8.80962L11.72 4.16667L10.1776 5.71508L12.9425 8.4889H4.16669V10.6774H12.9425L10.1776 13.4522L11.72 15Z" fill="currentColor"></path>
@@ -188,7 +185,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
