--- a/subscriptions-temporary.html
+++ b/subscriptions-temporary.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 20:10:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6775c6785bf181b36531192d" data-wf-site="656504e52e383d09efa776a6">
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 25 2025 19:53:09 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6775c6785bf181b36531192d" data-wf-site="656504e52e383d09efa776a6" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Subsciptions Temporary</title>
@@ -23,14 +23,14 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
                 <a href="index.html" class="nav-link">Home</a>
               </li>
               <li>
-                <a href="https://www.patreon.com/Resonite" target="_blank" class="nav-link">Patreon</a>
+                <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
               </li>
               <li>
                 <a href="https://resonite.sellfy.store/" class="nav-link">Merch</a>
@@ -48,7 +48,7 @@
                     <a href="features.html" class="nav-dropdown-link w-dropdown-link">Features</a>
                     <a href="case-studies.html" class="nav-dropdown-link w-dropdown-link">Case Studies</a>
                     <a href="https://resonite.com/policies/" target="_blank" class="nav-dropdown-link w-dropdown-link">Policies</a>
-                    <a href="http://resonite.com/Whitepaper.pdf" target="_blank" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
+                    <a href="https://resonite.com/Whitepaper.pdf" target="_blank" class="nav-dropdown-link w-dropdown-link">Whitepaper</a>
                   </nav>
                 </div>
               </li>
@@ -62,7 +62,7 @@
                     <div class="text-block-2">Socials</div>
                   </div>
                   <nav class="nav-dropdown-list shadow-three mobile-shadow-hide w-dropdown-list">
-                    <a href="http://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
+                    <a href="https://discord.gg/resonite" target="_blank" class="nav-dropdown-link w-dropdown-link">Discord</a>
                     <a href="https://www.twitch.tv/resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitch</a>
                     <a href="https://twitter.com/ResoniteApp?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" class="nav-dropdown-link w-dropdown-link">Twitter</a>
                     <a href="https://www.youtube.com/@resoniteapp" target="_blank" class="nav-dropdown-link w-dropdown-link">YouTube</a>
@@ -94,10 +94,7 @@
                 <a href="https://yellowdogman.com/contact.html" target="_blank" class="nav-link">Contact</a>
               </li>
               <li>
-                <a href="http://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
-              </li>
-              <li>
-                <a href="https://account.resonite.com/" class="nav-link">Subscriptions</a>
+                <a href="https://resonite.com/Resonite_PressKit_031025.zip" class="nav-link">Press Kit</a>
               </li>
               <li class="list-item-2">
                 <a href="https://store.steampowered.com/app/2519830?utm_source=resonite-website" class="button-6 w-button">Download</a>
@@ -125,7 +122,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.9962158203125px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
