--- a/experimental-pages/submit-an-event.html
+++ b/experimental-pages/submit-an-event.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Mar 10 2025 20:10:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="6567b01217f49566a6f11676" data-wf-site="656504e52e383d09efa776a6">
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 25 2025 19:53:09 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6567b01217f49566a6f11676" data-wf-site="656504e52e383d09efa776a6" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Submit an Event</title>
