mod + plugin policy update

--- a/policies/Changelog.html
+++ b/policies/Changelog.html
@@ -47,12 +47,16 @@
                 <li>We've added "including any relevant local, national, or international law." to the end of this line. This asks users to ensure they are taking in account the law in many areas before submitting content.</li>
             </ul>
         </section>
+        <section>
+            <h2>25th August 2025 - Mod & Plugin Policy</h2>
+            <p>Initial Release</p>
+        </section>
 
         <p>If you have questions about these policies, please contact at <SCRIPT LANGUAGE="JavaScript">user = 'privacy';site = 'yellowdogman.com';document.write('<a href=\"mailto:' + user + '@' + site + '\">');document.write(user + '@' + site + '</a>');</SCRIPT>.</p>
 
         <footer>
             <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
-            Copyright © 2023 Yellow Dog Man Studios S.r.o. 
+            Copyright © Yellow Dog Man Studios S.r.o. 
             </footer>
     </body>
 </html>
