--- a/policies/ContentLicense.html
+++ b/policies/ContentLicense.html
@@ -21,6 +21,11 @@
         <p>This license does not include projects produced by team members who are producing content for their own or others' purposes, e.g., personal projects, and projects that are not related to the development of the Resonite platform.</p>
 
         <p>This license does not include content produced by other users who are not considered members of the Resonite Team, or employees of Yellow Dog Man Studios s.r.o.</p>
+
+        <footer>
+            <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
+            Copyright © Yellow Dog Man Studios S.r.o. 
+        </footer>
     </body>
 </html>
 
