--- a/policies/PrivacyPolicy.html
+++ b/policies/PrivacyPolicy.html
@@ -1070,7 +1070,7 @@
 
         <footer>
         <a href="https://resonite.com">Home</a> | <a href="https://resonite.com/policies/index.html">Policies Page</a>
-        Copyright © 2023 Yellow Dog Man Studios S.r.o. 
+        Copyright © Yellow Dog Man Studios S.r.o. 
         </footer>
     </body>
 </html>
