fixup#: add link to new policy

--- a/policies/index.html
+++ b/policies/index.html
@@ -21,7 +21,7 @@
             <li><a href="Guidelines.html">User Guidelines</a></li>
             <li><a href="Security.html">Security Policy</a></li>
             <li><a href="ContentLicense.html">Content Licenses</a></li>
-            <li>Mod & Plugin Policy: Coming Soon!</li>
+            <li><a href="ModAndPlugin.html">Mod & Plugin Policy</a></li>
         </ul>
 
         <p>For transparency, we also have a changelog of changes to these items available <a href="Changelog.html">here</a>.</p>
