mod-policy: Clarify stance on publicization and non-public members

--- a/policies/ModAndPlugin.html
+++ b/policies/ModAndPlugin.html
@@ -73,7 +73,7 @@
             <h2 id="distribution-guidance">Distribution Guidance</h2>
             <p>As covered in our <a href="https://resonite.com/policies/EULA.html">EULA</a>, redistribution of Resonite, FrooxEngine, or any of its components is not allowed. However, there are some exceptions that we've made to aid modification developers.</p>
             <h3 id="reference-assemblies">Reference Assemblies</h3>
-            <p>We allow the distribution of <a href="https://learn.microsoft.com/en-us/dotnet/standard/assembly/reference-assemblies">Reference Assemblies</a> created by modification developers.</p>
+            <p>We allow the distribution of <a href="https://learn.microsoft.com/en-us/dotnet/standard/assembly/reference-assemblies">Reference Assemblies</a> created by modification developers. These assemblies are allowed to contain non-public members or be publicized.</p>
             <p>This also includes items that can be generated from these assemblies such as:</p>
             <ul>
                 <li>IPC Bindings</li>
