--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Aug 25 2025 19:53:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Nov 21 2025 19:45:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6" lang="en">
 <head>
   <meta charset="utf-8">
@@ -116,12 +116,12 @@
         </div>
       </div>
       <div class="efi-pr-01-pricing-grid-wrapper">
-        <div data-current="Tab 2" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
+        <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
           <div class="efi-pr-01-tab-menu w-tab-menu">
-            <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link">
+            <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link w--current">
               <div class="efi-tab-text">Personal and Student</div>
             </a>
-            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link w--current">
+            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Commercial and Education</div>
             </a>
             <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link">
@@ -129,7 +129,7 @@
             </a>
           </div>
           <div class="efi-pr-01-tabs-content w-tab-content">
-            <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane">
+            <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
               <div class="w-layout-grid efi-pr-01-pricing-grid-copy">
                 <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ecb3-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -217,7 +217,7 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
+            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane">
               <div class="w-layout-grid efi-pr-01-pricing-grid-copy-copy">
                 <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01c0-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -242,7 +242,7 @@
                         </div>
                         <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01d9-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
-                          <div class="efi-option">Cloud storage solutions starting at 500 MB</div>
+                          <div class="efi-option">Cloud storage solutions starting at 500 GB</div>
                         </div>
                         <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01de-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
@@ -318,7 +318,7 @@
                         </div>
                         <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed76-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
-                          <div class="efi-option">Cloud storage solutions starting at 500 MB</div>
+                          <div class="efi-option">Cloud storage solutions starting at 500 GB</div>
                         </div>
                         <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed7b-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
