--- a/licensing.html
+++ b/licensing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Nov 21 2025 19:45:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Nov 26 2025 21:46:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65fb4b31d52eb0c89c8db035" data-wf-site="656504e52e383d09efa776a6" lang="en">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div data-w-id="21ab5999-14dc-a856-5027-e3ad49ba1f23" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-left-container shadow-three w-nav">
       <div class="container">
         <div class="navbar-wrapper">
-          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
+          <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99147033691406px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w" class="image-9"></a>
           <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
               <li>
@@ -116,12 +116,12 @@
         </div>
       </div>
       <div class="efi-pr-01-pricing-grid-wrapper">
-        <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
+        <div data-current="Tab 2" data-easing="ease" data-duration-in="300" data-duration-out="100" class="efi-pr-01-tab w-tabs">
           <div class="efi-pr-01-tab-menu w-tab-menu">
-            <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link w--current">
+            <a data-w-tab="Tab 1" class="efi-tab-link black w-inline-block w-tab-link">
               <div class="efi-tab-text">Personal and Student</div>
             </a>
-            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link">
+            <a data-w-tab="Tab 2" class="efi-tab-link black w-inline-block w-tab-link w--current">
               <div class="efi-tab-text">Commercial and Education</div>
             </a>
             <a data-w-tab="Tab 3" class="efi-tab-link black w-inline-block w-tab-link">
@@ -129,7 +129,7 @@
             </a>
           </div>
           <div class="efi-pr-01-tabs-content w-tab-content">
-            <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
+            <div data-w-tab="Tab 1" class="efi-pr-01-tab-pane w-tab-pane">
               <div class="w-layout-grid efi-pr-01-pricing-grid-copy">
                 <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ecb3-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
@@ -217,22 +217,23 @@
                 </div>
               </div>
             </div>
-            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane">
+            <div data-w-tab="Tab 2" class="efi-pr-01-tab-pane w-tab-pane w--tab-active">
               <div class="w-layout-grid efi-pr-01-pricing-grid-copy-copy">
                 <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01c0-9c8db035" class="efi-pr-01-pricing-cell">
                   <div class="efi-pricing-container">
                     <div class="efi-pricing-header">
-                      <h4 class="efi-h4">Small Business License</h4>
+                      <h4 class="efi-h4">Developer License</h4>
                       <p class="efi-big-paragraph">Operate a small business on Resonite public universe <br>‍</p>
                     </div>
                     <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01c9-9c8db035" class="efi-price-block">
-                      <h2 class="efi-h2">$100/month<br>or $1000/year</h2>
+                      <h2 class="efi-h2">$100/month or $1000/year </h2>
                     </div>
+                    <div></div>
                     <div class="efi-pricing-button-wrapper">
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
                     <div>
-                      <div class="efi-option">Eligibility:  &gt;$10k projected revenue within <br>12-month period</div>
+                      <div class="efi-option"></div>
                     </div>
                     <div class="efi-pricing-points">
                       <div class="w-layout-grid efi-points-grid">
@@ -242,11 +243,11 @@
                         </div>
                         <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01d9-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
-                          <div class="efi-option">Cloud storage solutions starting at 500 GB</div>
+                          <div class="efi-option">Cloud storage solutions starting at 500 GB per seat</div>
                         </div>
                         <div id="w-node-_4e97f182-cbba-f3c7-945d-e7307fda01de-9c8db035"><img width="21" loading="lazy" alt="" src="images/11151d_128_Checkmark.png"></div>
                         <div>
-                          <div class="efi-option">Operate your business on the public universe</div>
+                          <div class="efi-option">Operate a business on the public universe</div>
                         </div>
                       </div>
                     </div>
@@ -264,11 +265,12 @@
                     <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed42-9c8db035" class="efi-price-block">
                       <h2 class="efi-h2">Flexible pricing options</h2>
                     </div>
+                    <div></div>
                     <div class="efi-pricing-button-wrapper">
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
                     <div>
-                      <div class="efi-option">Eligibility:  Incorporated business with projected revenue greater than $100k over 12 months</div>
+                      <div class="efi-option"></div>
                     </div>
                     <div class="efi-pricing-points">
                       <div class="w-layout-grid efi-points-grid">
@@ -304,11 +306,12 @@
                     <div id="w-node-_22ebd6c1-076f-4699-af43-48b438d2ed6a-9c8db035" class="efi-price-block">
                       <h2 class="efi-h2">Low annual fee<br>‍</h2>
                     </div>
+                    <div></div>
                     <div class="efi-pricing-button-wrapper">
                       <a href="https://yellowdogman.com/contact.html" target="_blank" class="efi-pricing-button-copy w-button">Get Started</a>
                     </div>
                     <div>
-                      <div class="efi-option">Eligibility:  Established education institution</div>
+                      <div class="efi-option"></div>
                     </div>
                     <div class="efi-pricing-points">
                       <div class="w-layout-grid efi-points-grid">
@@ -435,7 +438,7 @@
   <section class="footer-dark-3">
     <div class="container-9-copy">
       <div class="footer-wrapper-2">
-        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99620056152344px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
+        <a href="#" class="navbar-brand-2 w-nav-brand"><img src="images/RSN_Logo_Color_1080.png" loading="lazy" width="159" sizes="(max-width: 479px) 92vw, 158.99147033691406px" alt="" srcset="images/RSN_Logo_Color_1080-p-500.png 500w, images/RSN_Logo_Color_1080-p-800.png 800w, images/RSN_Logo_Color_1080-p-1080.png 1080w, images/RSN_Logo_Color_1080.png 1081w"></a>
         <div class="footer-content-2">
           <div id="w-node-_5993f6c7-141f-9a06-cb94-63b781692eab-81692e9e" class="footer-block-2">
             <div class="title-small-2">Company</div>
